@@ -119,7 +119,6 @@ OPTIONS:
  -f|--fast       SHOW - use apt-cache's version, due to its speed.
  -h|--help       Print usage message.
  -n|--noauth     Allow packages from unathenticated archives.
- -P|--pager      CHANGELOG - Use a pager for viewing the entire Debian changelog of a package.
  -p|--pause      Pause before exiting.
  -q|--quiet      Execute system commands quietly.
  -s|--simulate   Show commands to be executed but don't execute.
