@@ -10,8 +10,10 @@ wajig (2.3) unstable; urgency=low
   * fix some lintian warnings
   * replace usage of getopt with the superior argparse; this required
     increasing minimum Python version to 3.2
+  * get rid of --pager option; it's really excess, considering that user can
+    simply do "wajig COMMAND | pager" by herself
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 02 Jan 2012 01:21:04 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 03 Jan 2012 10:31:17 +0200
 
 wajig (2.2) unstable; urgency=low
 
